cmake_minimum_required(VERSION 3.6)
project(pdp_11_emulator)

find_package(Qt5Core REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Gui REQUIRED)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES main.cpp common.h)
set(SOURCE_FILES ${SOURCE_FILES} core/unibus/unibus.cpp core/unibus/unibus.h)
set(SOURCE_FILES ${SOURCE_FILES} core/unibus/unibus_device.h)
set(SOURCE_FILES ${SOURCE_FILES} core/memory/ram.cpp core/memory/ram.h)
set(SOURCE_FILES ${SOURCE_FILES} core/cpu/cpu.cpp core/cpu/cpu.h)
set(SOURCE_FILES ${SOURCE_FILES} core/cpu/cpu_cache.cpp core/cpu/cpu_cache.h)
set(SOURCE_FILES ${SOURCE_FILES} core/pdp_machine.cpp core/pdp_machine.h)
set(SOURCE_FILES ${SOURCE_FILES} core/memory/rom.cpp core/memory/rom.h)
set(SOURCE_FILES ${SOURCE_FILES} core/utils/disasm.cpp core/utils/disasm.h)
set(SOURCE_FILES ${SOURCE_FILES} core/io_devices/pdp_keyboard.cpp core/io_devices/pdp_keyboard.h)
set(SOURCE_FILES ${SOURCE_FILES} core/io_devices/pdp_display_adapter.cpp core/io_devices/pdp_display_adapter.h)
set(SOURCE_FILES ${SOURCE_FILES} gui/mainwindow.cpp gui/mainwindow.h gui/moc_mainwindow.cpp gui/ui_mainwindow.h)
set(SOURCE_FILES ${SOURCE_FILES} gui/cpustatetableview.cpp gui/cpustatetableview.h gui/moc_cpustatetableview.cpp)
set(SOURCE_FILES ${SOURCE_FILES} gui/disasmtableview.cpp gui/disasmtableview.h gui/moc_disasmtableview.cpp)
set(SOURCE_FILES ${SOURCE_FILES} gui/memoryexplorertableview.cpp gui/memoryexplorertableview.h gui/moc_memoryexplorertableview.cpp)
set(SOURCE_FILES ${SOURCE_FILES} gui/customqgraphicsview.cpp gui/customqgraphicsview.h gui/moc_customqgraphicsview.cpp)

add_executable(pdp_11_emulator ${SOURCE_FILES})
qt5_use_modules(pdp_11_emulator Core Widgets Gui)